# rust-grpc-comp

./: Dockerfile  README.md
client_java/: pom.xml
client_java/src/main/java/ca/gearzero/rgc/client/: Client.java  GetUserCredentialTask.java  GetUserFlagsTask.java  RandomUtil.java  UserServiceClient.java
proto/: user_model.proto  user_service.proto
server_java/: pom.xml
server_java/src/main/java/ca/gearzero/rgc/server/: Server.java  UserFlagsModel.java  UserServiceImpl.java
server_rust_grpc/: .gitignore  Cargo.toml  build.rs
server_rust_grpc/src/: main.rs
server_rust_grpcio/: Cargo.toml  build.rs  log4rs.yml
server_rust_grpcio/src/: main.rs
server_rust_tonic/: Cargo.toml  build.rs
server_rust_tonic/src/: main.rs
